Fix issues on UI process on Firefox

--- a/client/css/styles.less
+++ b/client/css/styles.less
@@ -55,6 +55,12 @@
 	height: 30px;
 }
 
+.twist-in-text {
+	display: inline-block;
+	color: blue;
+	margin-right: 6px;
+}
+
 .twist-tag-in-text {
 	display: inline-block;
 	color: red;
